--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-Br">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
+  <head>
+    <meta charset="utf-8" />
+    <title>Frontend</title>
+    <base href="/" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAYP8e4rWP3irTk7C-rp4kwSuXnLUs-Q3k"></script>
 </html>
