visual pronto, conexão com banco de dados e seus middlewares prontos e funcionando

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <title>Frontend</title>
+    <title>Painel Administrativo</title>
     <base href="/" />
 
     <meta
